--- a/packages/my-package1/package.json
+++ b/packages/my-package1/package.json
@@ -37,5 +37,10 @@
       }
     }
   },
-  "dependencies": {}
+  "description": "This library was generated with [Nx](https://nx.dev).",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Nitsan Zohar",
+  "license": "ISC"
 }
