--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "private": true,
   "devDependencies": {
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
     "@nx/esbuild": "22.3.3",
     "@nx/eslint": "^22.3.3",
     "@nx/eslint-plugin": "^22.3.3",
